<resources>
    <string name="app_name">BasicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="main_title">Home</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="next">Next</string>
    <string name="first_activity">First Activity</string>
</resources>
