<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.basicactivity.MainActivity">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_red_24dp"
        android:orderInCategory="100"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <!-- our search option -->
    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="200"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="300"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="400"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="500"
        app:showAsAction="never" />
</menu>
